--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,13 @@
 .social {
-  display: flex;
   .list-reset;
+  display: flex;
+  align-items: center;
+}
+
+.social__item {
+  margin-right: 41px;
+  font-size: 0;
+  line-height: 0;
 }
 
 .social__link:hover path {
