--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -7,9 +7,23 @@
 @dark-green-hover: #46C1AE;
 @green-underline: #62D1BA;
 @green-underline-hover: #46C1AE;
-@light-gray: #F1F1F1;
+@light-grey: #F1F1F1;
+@lines-grey: #ECECEC;
 @dark-grey: #444444;
+@base-background: #F9F9F9;
 @base-red: #FF0000;
 
-//fonts
+// fonts
 @base-font: "Open Sans", "Arial", sans-serif;
+
+// viewports
+@mobile-width: 320px;
+@mobile-width-max: 767px;
+@tablet-width: 768px;
+@desktop-width: 1150px;
+
+//paddings
+@mobile-padding: 30px;
+@tablet-padding: 50px;
+@desktop-padding: 50px;
+@desktop-custom-padding: 225px;
