--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,25 +9,32 @@
 
 // header
 @import "blocks/page-header.less";
+@import "blocks/logo.less";
 @import "blocks/site-nav.less";
 @import "blocks/site-search.less";
 @import "blocks/cart.less";
+@import "blocks/extra-nav.less";
 
 // index page
 @import "blocks/page-main.less";
 @import "blocks/fast-links.less";
-@import "blocks/features.less";
+@import "blocks/top-sales.less";
 @import "blocks/about.less";
 @import "blocks/reviews.less";
 @import "blocks/contacts.less";
 
+// inner-pages
+@import "blocks/inner-page.less";
+@import "blocks/page-catalog.less";
+@import "blocks/page-order.less";
+
 // catalog
-@import "blocks/catalog.less";
+@import "blocks/products.less";
 @import "blocks/production-process.less";
 
 // order
-@import "blocks/page-order.less";
 @import "blocks/order-form.less";
+@import "blocks/form-group.less";
 
 // modal-order
 @import "blocks/modal-order.less";
@@ -35,3 +42,4 @@
 // footer
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
+@import "blocks/copyright.less";
