--- a/source/less/blocks/order-form.less
+++ b/source/less/blocks/order-form.less
@@ -1,59 +1,99 @@
-.form-group__title,
-.order-form__label,
-.order-form__text-field,
-.order-form__text-field::placeholder,
-.order-form__textarea,
-.order-form__textarea::placeholder {
-  font-size: 17px;
-  line-height: 20px;
-  color: inherit;
+.order-form__header {
+  margin-bottom: 29px;
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+    margin: 0 auto;
+    margin-bottom: 63px;
+    padding-right: @mobile-padding;
+    padding-left: @mobile-padding;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+    padding-right: @desktop-custom-padding;
+    padding-left: @desktop-custom-padding;
+  }
 }
 
-.form-group__title {
-  font-weight: bold;
-  text-transform: uppercase;
-  color: @base-green;
+.order-form__promo-text {
+  padding: 0;
+  font-size: 13px;
+  line-height: 24px;
+  color: @dark-grey;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 62px;
+    font-size: 17px;
+    line-height: 30px;
+  }
 }
 
-.form-group {
-  border: none;
-  border-top: 1px solid @base-green;
+.order-form__group {
+  margin-bottom: 33px;
+
+  &:last-of-type {
+    margin-bottom: 17px;
+  }
+
+  & fieldset {
+    margin-bottom: 33px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    &:last-of-type {
+      margin-bottom: 3px;
+    }
+
+    &:nth-of-type(even) {
+      background-color: @light-grey;
+    }
+
+    & fieldset {
+      margin-bottom: 24px;
+    }
+  }
 }
 
-.order-form__label {
-  font-weight: bold;
-}
+.order-form__footer {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: @tablet-width;
+    margin: 0 auto;
+    padding-right: @tablet-padding;
+    padding-left: @tablet-padding;
+  }
 
-.order-form__text-field {
-  border: none;
-  box-shadow: inset 0 -2px 0 @base-black;
-  outline: none;
-}
-
-.order-form__text-field:hover,
-.order-form__text-field:active,
-.order-form__text-field:focus {
-  box-shadow: inset 0 -2px 0 @green-underline;
-}
-
-.order-form__text-field::placeholder,
-.order-form__textarea::placeholder {
-  color: fade(@base-black, 30%);
-}
-
-.order-form__textarea {
-  border: 2px solid @dark-grey;
-  outline: none;
-}
-
-.order-form__textarea:hover,
-.order-form__textarea:active,
-.order-form__textarea:focus {
-  border: 2px solid @green-underline;
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+    padding-right: @desktop-custom-padding;
+    padding-left: @desktop-custom-padding;
+  }
 }
 
 .order-form__attention {
+  margin: 0;
+  margin-bottom: 30px;
   font-size: 14px;
   line-height: 16px;
   color: @dark-grey;
+
+  @media (min-width: @tablet-width) {
+    order: 1;
+    margin: 0;
+    font-size: 17px;
+    line-height: 30px;
+  }
+}
+
+.order-form__button {
+  @media (min-width: @tablet-width) {
+    width: 230px;
+  }
 }
