--- a/source/less/blocks/site-nav.less
+++ b/source/less/blocks/site-nav.less
@@ -1,19 +1,69 @@
 .site-nav__list {
   .list-reset;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: flex-start;
+  }
+}
+
+.site-nav__item {
+  box-shadow: 0 1px 0 @lines-grey, inset 0 1px 0 @lines-grey;
+
+  @media (min-width: @tablet-width) {
+    padding-right: 34px;
+    box-shadow: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-right: 34px;
+    padding-left: 34px;
+    border-right: 1px solid fade(@base-black, 10%);
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 }
 
 .site-nav__link {
+  display: block;
+  width: @mobile-width;
+  margin: 0 auto;
+  padding-right: @mobile-padding;
+  padding-left: @mobile-padding;
+  min-height: 79px;
   font-size: 17px;
-  line-height: 24px;
+  line-height: 79px;
   font-weight: bold;
   color: inherit;
+  text-indent: 46px;
   text-decoration: none;
-}
 
-.site-nav__link:hover {
-  color: fade(@base-black, 60%);
-}
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    width: auto;
+    min-height: auto;
+    padding: 0;
+    font-size: 15px;
+    line-height: 24px;
+    text-indent: 0;
+  }
 
-.site-nav__link:active {
-  color: fade(@base-black, 30%);
+  @media (min-width: @desktop-width) {
+    font-size: 17px;
+    line-height: 88px;
+  }
+
+  &:hover {
+    color: fade(@base-black, 60%);
+  }
+
+  &:active {
+    color: fade(@base-black, 30%);
+  }
 }
