--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -29,7 +29,7 @@
   padding-top: 22px;
   padding-right: @mobile-padding;
   padding-bottom: 22px;
-  padding-left:  @mobile-padding;
+  padding-left: @mobile-padding;
   text-align: center;
   box-shadow: 0 1px 0 @lines-grey, inset 0 1px 0 @lines-grey;
 
@@ -60,14 +60,14 @@
     top: 32px;
     width: 20px;
     height: 14px;
-    background-image: url(/img/icons/menu-open.svg);
+    background-image: url("/img/icons/menu-open.svg");
   }
 
   &--close {
     top: 29px;
     width: 21px;
     height: 20px;
-    background-image: url(/img/icons/menu-close.svg);
+    background-image: url("/img/icons/menu-close.svg");
   }
 
   &--nojs {
